fix: dialog content x-overflow

--- a/src/app/components/auth-modal/auth-modal.component.scss
+++ b/src/app/components/auth-modal/auth-modal.component.scss
@@ -58,6 +58,10 @@ div {
   background-repeat: no-repeat;
 }
 
+mat-dialog-content {
+  overflow: hidden;
+}
+
 @media (width <= 520px) {
   .OAuth_wrapper {
     transform: scale(0.75, 0.75);
