--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,5 +1,6 @@
 :host {
   display: flex;
+  overflow-x: hidden;
   margin: 0 auto;
   max-width: 495px;
   max-height: 1055px;
